survey-planning-tool/envs/jaleel-dev/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: qa4mbes
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: api
    spec:
      containers:
        - image: ausseabed/spt-api:latest-beta
          imagePullPolicy: Always
          name: api
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: api
  name: api
  namespace: qa4mbes
spec:
  ports:
   - port: 3000
     targetPort: 3000
  type: NodePort
  selector:
    app.kubernetes.io/name: api
